--- a/Chat/public/css/home_style.css
+++ b/Chat/public/css/home_style.css
@@ -5,7 +5,7 @@
 }
 
 /* Version Escritorio */
-@media (min-width: 1281px){
+@media (min-width: 767px){
     .container {
         height: 100%;
         width: 100%;
@@ -92,10 +92,151 @@
         font-size: 14px;
         margin-left: 15px;
     }
+
+
+
+
+
+
+    /*Index o login y registro*/
+
+#Principal{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('../img/1.jpg') ;
+    background-position: center;    
+    background-repeat: no-repeat;
+
+    z-index:0;
+}
+#central{
+    width: 350px;
+    height: 550px;
+    background-color: #FAFAFA;
+    display: flex;  
+    justify-content: center;
+    flex-wrap: wrap;
+    border-radius: 18px;
+     box-shadow: 2px 3px #8888;
+     margin-left: 20%;
+}
+#arriba{
+        
+    margin-top:40px;
+    height: 1%;
+    width: 20%;
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+
+}
+#arriba>img{
+    width: 200px;
+    height: 200px;
+}
+#titulo{
+    margin-top: 10%;
+    font-family: 'Roboto', sans-serif;
+}
+#enmedio{
+    
+margin-top: 10%;
+    height: 10%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+#abajo{
+    margin-bottom: 30%;
+    height: 30%;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: 15px;
+}
+
+
+.mandar{
+    margin-top: 10%;
+    height: 35px;
+    width: 43%;
+    background-color:#30499B;
+    border-radius: 10px;
+    font-size: 15px;
+    color: white;
+    cursor: pointer;
+}
+.inputDatos{
+    margin-bottom:30px;
+    height: 30px;
+    width: 100%;
+    border:none;
+    outline: none;
+    background-color: transparent;
+    border-bottom: 1px solid black;
+    font-size: 18px;
+    
+}
+input[type=checkbox].toggle-switch {
+
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    width: 170px;
+    height: 2.38em;
+    border-radius: 1em;
+    background-color:#b7b7bb ;
+    outline: 0;
+    cursor: pointer;
+    transition: background-color 0.05s ease-in-out;
+    position: relative;
+   
+}
+
+input[type=checkbox].toggle-switch:checked {
+    background-color: #b7b7bb;
+
+}
+
+input[type=checkbox].toggle-switch::after {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: '';
+    width: 7em;
+    height: 2.38em;
+    background-color: #30499B;
+    content: "Registro";
+    
+    border-radius: 1em;
+    position: absolute;
+    transform: scale(1.05);
+    left: 0;
+    transition: left 0.09s ease-in-out;
+   
+}
+
+input[type=checkbox].toggle-switch:checked::after {
+    left: 5.8em;
+    content: "Login" ;
+}
+
 }
 
 /*Version movil*/
-@media (min-width: 320px) and (max-width: 480px){
+
+@media (min-width: 320px) and (max-width: 767px){
     .container {
         height: 100%;
         width: 100%;
@@ -182,4 +323,140 @@
         font-size: 14px;
         margin-left: 15px;
     }
+
+
+
+
+#Principal{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('../img/1.jpg') ;
+    background-position: center;    
+    background-repeat: no-repeat;
+
+    z-index:0;
+}
+#central{
+    width: 350px;
+    height: 550px;
+    background-color: #FAFAFA;
+    display: flex;  
+    justify-content: center;
+    flex-wrap: wrap;
+    border-radius: 18px;
+     box-shadow: 2px 3px #8888;
+}
+#arriba{
+        
+    margin-top:40px;
+    height: 1%;
+    width: 20%;
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+
+}
+#arriba>img{
+    width: 200px;
+    height: 200px;
+}
+#titulo{
+    margin-top: 10%;
+    font-family: 'Roboto', sans-serif;
+}
+#enmedio{
+    
+margin-top: 10%;
+    height: 10%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+#abajo{
+    margin-bottom: 30%;
+    height: 30%;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: 15px;
+}
+
+
+.mandar{
+    margin-top: 10%;
+    height: 35px;
+    width: 43%;
+    background-color:#30499B;
+    border-radius: 10px;
+    font-size: 15px;
+    color: white;
+    cursor: pointer;
+}
+.inputDatos{
+    margin-bottom:30px;
+    height: 30px;
+    width: 100%;
+    border:none;
+    outline: none;
+    background-color: transparent;
+    border-bottom: 1px solid black;
+    font-size: 18px;
+    
+}
+input[type=checkbox].toggle-switch {
+
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    width: 170px;
+    height: 2.38em;
+    border-radius: 1em;
+    background-color:#b7b7bb ;
+    outline: 0;
+    cursor: pointer;
+    transition: background-color 0.05s ease-in-out;
+    position: relative;
+   
+}
+
+input[type=checkbox].toggle-switch:checked {
+    background-color: #b7b7bb;
+
+}
+
+input[type=checkbox].toggle-switch::after {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: '';
+    width: 7em;
+    height: 2.38em;
+    background-color: #30499B;
+    content: "Registro";
+    
+    border-radius: 1em;
+    position: absolute;
+    transform: scale(1.05);
+    left: 0;
+    transition: left 0.09s ease-in-out;
+   
+}
+
+input[type=checkbox].toggle-switch:checked::after {
+    left: 5.8em;
+    content: "Login" ;
+}
+
+
 }
