--- a/Chat/public/css/home_style.css
+++ b/Chat/public/css/home_style.css
@@ -5,96 +5,43 @@
 }
 
 /* Version Escritorio */
-@media (min-width: 767px){
-    .container {
-        height: 100%;
-        width: 100%;
-    }
-    
-    .top_banner {
-        position: fixed;
-        background-color: #F3F3F3;
-        width: 100%;
-        height: 45px;
-        top: 0px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .top_banner>h1{
-        font-size: 16px;
-    }
-    
-    .menu_bar {
-        position: fixed;
-        background-color: #f3f3f3;
-        width: 100%;
-        height: 50px;
-        bottom: 0px;
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .menu_button {
-        background-color: #f3f3f3;
-        height: 50px;
-        flex-grow: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .menu_button>a>img {
-        height: 32px;
-        width: 32px;
-        fill: blue;
-    }
-    
-    .main_container {
-        position: absolute;
-        background-color: #ffffff;
-        width: 100%;
-        height: auto;
-        z-index: -1;
-    }
-    
-    .search {
-        width: 100%;
-        height: 45px;
-        margin-top: 45px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .search_bar {
-        border: none;
-        width: 346px;
-        height: 21px;
-        padding-left: 10px;
-        padding-right: 10px;
-        box-sizing: border-box;
-        border-radius: 6px;
-        background-color: #f3f3f3;
-        outline: none;
-    }
-    
-    .letter{
-        width: 100%;
-        height: 21px;
-        background-color: #f3f3f3;
-        display: flex;
-        align-items: center;
-    }
-    
-    .letter>p{
-        font-size: 14px;
-        margin-left: 15px;
-    }
+@media (min-width: 768px){
+   
+.container{
+    width: 100%;
+    height: 100%;
+    background-color: #252621;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.top_banner{
+    background-color: #eee;
+    width: 20%;
+    height: 80%;
+     border-radius: 10px;
+     margin-right:30px; 
+      box-shadow: 3px 2px grey;
+}
+.image{
+    width: 0px;
+    height: 0px;
+}
 
-
-
+.main_container{
+    width: 65%;
+    height: 80%;
+    background-color: yellow;
+    border-radius: 10px;
+}
+.search{
+    background-color: white;
+    width: 100%;
+    height: 9%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
 
 
@@ -103,16 +50,17 @@
 #Principal{
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
     background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('../img/1.jpg') ;
-    background-position: center;    
+      
     background-repeat: no-repeat;
+  
 
-    z-index:0;
+   
 }
 #central{
     width: 350px;
@@ -123,7 +71,7 @@
     flex-wrap: wrap;
     border-radius: 18px;
      box-shadow: 2px 3px #8888;
-     margin-left: 20%;
+     
 }
 #arriba{
         
@@ -280,7 +228,7 @@ input[type=checkbox]#toggleswitch:checked::after {
 
 /*Version movil*/
 
-@media (min-width: 320px) and (max-width: 767px){
+@media (min-width: 100px) and (max-width: 767px){
     .container {
         height: 100%;
         width: 100%;
@@ -321,8 +269,8 @@ input[type=checkbox]#toggleswitch:checked::after {
     }
     
     .menu_button>a>img {
-        height: 32px;
-        width: 32px;
+        height: 28px;
+        width: 28px;
         fill: blue;
     }
     
@@ -371,6 +319,15 @@ input[type=checkbox]#toggleswitch:checked::after {
 
 /*Login*/
 
+#Principal{
+    width: 100%;
+    height: 100%;
+   
+    display: flex;
+    align-items: left;
+    justify-content: center;
+
+}
 
 #central{
     width: 100%;
@@ -380,8 +337,7 @@ input[type=checkbox]#toggleswitch:checked::after {
     display: flex;  
     justify-content: center;
     flex-wrap: wrap;
-    border-radius: 18px;
-     box-shadow: 2px 3px #8888;
+         box-shadow: 2px 3px #8888;
 }
 #arriba{
         
