--- a/Chat/public/css/chatRoom_style.css
+++ b/Chat/public/css/chatRoom_style.css
@@ -53,7 +53,7 @@
     padding-right: 8px;
     padding-top: 6px;
     padding-bottom: 6px;
-    margin-bottom: 15px;
+    margin-top: 15px;
 
     display: flex;
     align-items: center;
@@ -86,7 +86,7 @@
     padding-right: 8px;
     padding-top: 6px;
     padding-bottom: 6px;
-    margin-bottom: 15px;
+    margin-top: 15px;
     margin-left: auto;
     margin-right: 8px;
 
