se juntaron los .html
ya esta todo el menu en un solo html y funcionando

--- a/Chat/public/css/home_style.css
+++ b/Chat/public/css/home_style.css
@@ -254,7 +254,7 @@
         align-items: center;
     }
     
-    .menu_button>a>img {
+    .menu_button>img {
         height: 28px;
         width: 28px;
         fill: blue;
