--- a/Chat/public/css/chatRoom_style.css
+++ b/Chat/public/css/chatRoom_style.css
@@ -20,13 +20,36 @@
     justify-content: start;
 }
 
+.pBack{
+    width: 24px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pBack>img{
+    height: 24px;
+    width: 24px;
+}
+
 .pPic{
     width: 45px;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.userPic{
+    height: 32px;
+    width: 32px;
+    border-radius: 100%;
 }
 
 .pInfo>h1{
     font-size: 16px;
+    padding-left: 5px;
 }
 
 .main_container {
@@ -54,6 +77,7 @@
     padding-top: 6px;
     padding-bottom: 6px;
     margin-top: 15px;
+    max-width: 400px;
 
     display: flex;
     align-items: center;
@@ -61,12 +85,12 @@
 }
 
 .in_p>p{
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .in_hour{
     height: 100%;
-    width: 50px;
+    width: 60px;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -89,6 +113,7 @@
     margin-top: 15px;
     margin-left: auto;
     margin-right: 8px;
+    max-width: 400px;
 
     display: flex;
     align-items: center;
@@ -96,13 +121,13 @@
 }
 
 .out_p>p{
-    font-size: 16px;
+    font-size: 14px;
     color: white;
 }
 
 .out_hour{
     height: 100%;
-    width: 50px;
+    width: 60px;
     margin-right: 5px;
     display: flex;
     justify-content: flex-start;
