--- a/Chat/public/css/home_style.css
+++ b/Chat/public/css/home_style.css
@@ -302,6 +302,60 @@
         margin-left: 15px;
     }
 
+    /*Settings*/
+    .global_settings{
+        margin-top: 45px;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .profile_settings{
+        display: flex;
+    }
+
+    .profile_pic{
+        width: 125px;
+        height: 120px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .edit_button{
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .edit_button>a{
+        color: #30499B;
+    }
+
+    .profile_pic_image{
+        width: 80px;
+        height: 80px;
+        border-radius: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .profile_pic_image>img{
+        height: 100%;
+    }
+
+    .profile_info{
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
     /*Login*/
 
     #Principal{
