--- a/Chat/public/css/home_style.css
+++ b/Chat/public/css/home_style.css
@@ -303,12 +303,26 @@
     }
 
     /*Settings*/
+    .main_containerConfig{
+        position: absolute;
+        background-color: #E0E0E0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        display: flex;
+        flex-direction: column;
+    }
+
     .global_settings{
-        margin-top: 45px;
+        margin-top: 65px;
         width: 100%;
         height: auto;
         display: flex;
         flex-direction: column;
+        background-color: white;
+        padding: 10px 0px;
+        border-top: 1px solid #707070;
+        border-bottom: 1px solid #707070;
     }
 
     .profile_settings{
@@ -325,14 +339,15 @@
     }
 
     .edit_button{
-        flex-grow: 1;
+        margin-top: 5px;
         display: flex;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
     }
 
     .edit_button>a{
         color: #30499B;
+        font-size: 16px;
     }
 
     .profile_pic_image{
@@ -340,8 +355,8 @@
         height: 80px;
         border-radius: 60px;
         display: flex;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
     }
 
     .profile_pic_image>img{
@@ -354,6 +369,87 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
+    }
+
+    .username_input>input{
+        height: 36px;
+        width: 100%;
+        max-width: 200px;
+        border: none;
+        box-sizing: border-box;
+        outline: none;
+        border-top: 2px solid #f3f3f3;
+        border-bottom: 2px solid #f3f3f3;
+        font-size: 16px;
+        margin-bottom: 4px;
+    }
+
+    .user_mail>p{
+        color: #707070;
+    }
+
+    .save_button{
+        width: 100%;
+        height: auto;
+        margin-top: 8px;
+    }
+
+    .buttonConfig{
+        background-color: #30499B;
+        border: none;
+        color: white;
+        padding: 12px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        border-radius: 20px;
+        margin-left: 22px;
+        outline: none;
+    }
+
+    .newPassword{
+        margin-top: 20px;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        padding: 10px;
+        border-top: 1px solid #707070;
+        border-bottom: 1px solid #707070;
+    }
+
+    .newPassword_inputs{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .newPassword_inputs>input{
+        height: 36px;
+        width: 100%;
+        border: none;
+        box-sizing: border-box;
+        outline: none;
+        border-top: 2px solid #f3f3f3;
+        border-bottom: 2px solid #f3f3f3;
+        font-size: 16px;
+        margin-bottom: 10px;
+        margin-left: 22px;
+    }
+
+    .buttonConfig_two{
+        width: 80px;
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        padding: 12px;
+        font-size: 14px;
+        border-radius: 20px;
+        margin-left: 22px;
+        outline: none;
     }
 
     /*Login*/
