--- a/chat_betas/src/assets/css/home_style.css
+++ b/chat_betas/src/assets/css/home_style.css
@@ -62,23 +62,43 @@
     height: 100%;
 }
 #userPictt>img{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+}
+#backPict{
+    
+    cursor: pointer;
+    
+    width: 35px;
+    height: 35px;
+}
+#back-web{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    height: 60%;
+}
+#ajustes{
+    width: 20px;
+    height: 20px;
+    
+    margin-left: 84%;
+    position: absolute;
+}
+#config-web{
     width: 100%;
     height: 100%;
 }
 
-#ajustes{
-    width: 25px;
-    height: 25px;
-  cursor: pointer;
-    margin-left: 84%;
-    position: absolute;
-}
-.search-bar{
-
+#search-bar{
+   
     width: 98%;
     height: 9%;
    background-color: #EEEEEE;
-    display: flex;
+    display: flex ;
     align-items: center;
     justify-content: center;
 
@@ -114,7 +134,7 @@
     
 }
 #search-input{
-
+    color: grey;
     margin-left: 2%;
     width: 100%;
     height: 90%;
@@ -137,6 +157,7 @@ flex-direction: column;
 
 }
 .message-in{
+    cursor: pointer;
     margin-left: 2%;
     margin-top: 5px;
     background-color: white;
@@ -256,7 +277,6 @@ margin-top: 10px;
     width: 32px;
     border-radius: 100%;
 }
-.
 
 .pInfo>h1{
     font-size: 16px;
@@ -420,9 +440,7 @@ display: initial !important;
 }
 
 
-.search_bar{
-    display: none;
-}
+
 
 
 
