--- a/chat_betas/src/views/chat.ejs
+++ b/chat_betas/src/views/chat.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/home_style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
+    <script  defer type="text/javascript" src="./js/funciones.js"></script>
     <script  defer type="text/javascript" src="./js/funciones_jq.js"></script>
     
     <title>Chat</title>
@@ -17,18 +18,21 @@
 
        <div class="ourUser">
            <div id="ourUser-picture">
+                <div id="backPict" style="display:none;"><img src="img/back.svg"  id="back-web"></div>
                 <div id="userPict"><img src="img/user.svg" ></div>
            </div>
            <div id="ajustes">
                <div id="userPictt"><img src="img/menu.png"  id="config-web"></div>
+
            </div>
        </div>
-        <div class="search-bar">
+        <div id="search-bar" >
             <div id="search-img">
                 <img src="img/search.png" >
             </div>
             <div id="search-content">
-                <input type="search" id="search-input">
+                <input type="search" value="Buscar Chat" id="search-input"onclick="if(this.value=='Buscar Chat') 
+                this.value=''" onblur="if(this.value=='') this.value='Buscar Chat'">
             </div>
 
         </div>
@@ -46,7 +50,7 @@
                            <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
                        </div>
                        <div id="little-text">
-                           <p>Mesnaje de prototipo</p>
+                           <p>Mensaje de prototipo</p>
                        </div>
                    </div>
                 </div>
@@ -87,12 +91,12 @@
         </div>
 
         <div class="main_container" id="contacts" style="display: none;">
-            <div class="search">
-                <form>
-                    <input type="text" class="search_bar" placeholder="search">
-                </form>
-            </div>
-
+           
+                <div class="search">
+                        <form>
+                            <input type="text" class="search_bar" placeholder="search">
+                        </form>
+                    </div>
             <div class="letter">
                 <p>Me</p>
             </div>
@@ -148,11 +152,7 @@
 
 
 
-            <div class="search">
-                <form>
-                    <input type="text" class="search_bar" placeholder="search">
-                </form>
-            </div>
+            
         </div>
 
         <div class="main_containerConfig" id="config" style="display: none;">
