--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -27,7 +27,7 @@
 			</div>
 			<div id="abajo">
 				<input type="text" class="inputDatos" id="Correo" placeholder="Correo electronico">
-				<input type="text" class="inputDatos" id="Contraseña" placeholder="Contraseña">
+				<input type="password" class="inputDatos" id="Contraseña" placeholder="Contraseña">
 				
 				<input type="submit" id="login-button" class ="mandar" value="Login">
 
@@ -40,6 +40,7 @@
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="./js/funciones.js"></script>
+	<script src="./js/funciones.js"></script>
+	<script src="./js/funciones_jq.js"></script>
 </body>
 </html>
