--- a/chat_betas/src/views/chat.ejs
+++ b/chat_betas/src/views/chat.ejs
@@ -7,146 +7,124 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
     <script  defer type="text/javascript" src="./js/funciones_jq.js"></script>
+    <script type="text/javascript" src="../assets/js/funciones.js"></script>
     
     <title>Chat</title>
 </head>
 <body>
     <div class="Principal-home">
 
- <div id="Principal-contacts" style="display: none;" data-id-personal="<%= data[0].idUsuario %>">
+        <div id="Principal-contacts" style="display: none;" data-id-personal="<%= data[0].idUsuario %>">
 
-       <div class="ourUser">
-           <div id="ourUser-picture">
-                <div id="userPict"><img src="img/user.svg" ></div>
-           </div>
-           <div id="ajustes">
-               <div id="userPictt"><img src="img/menu.png"  id="config-web"></div>
-           </div>
-       </div>
-        <div class="search-bar">
-            <div id="search-img">
-                <img src="img/search.png" >
-            </div>
-            <div id="search-content">
-                <input type="search" id="search-input">
-            </div>
-
-        </div>
-
-
-         <div id="message-content">
-
-            <% for(let i = 0; i < data.length; i++) { %>
-                <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
-                   <div id="img-in">
-                        <div id="userInPict"><img src="img/user.svg" ></div>
-                   </div>
-                   <div id="datos-in">
-                       <div id="name-in">
-                           <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
-                       </div>
-                       <div id="little-text">
-                           <p>Mesnaje de prototipo</p>
-                       </div>
-                   </div>
+            <div class="ourUser">
+                <div id="ourUser-picture">
+                        <div id="userPict"><img src="img/user.svg" ></div>
                 </div>
-            <% } %>
-
-         </div>
-
-    </div>
-
-
-
-
-
-
-    <div class="container">
-
-    <div class="top_banner-web" style="display: none;">
-            <div class="pBack"><img src="img/back.svg"></div>
-            <div class="pPic"><img src="img/user.svg" class="userPic"></div>
-            <div class="pInfo">
-                <h1>User</h1>
-            </div>
-        </div>
-
-         <div class="top_banner-web"  style="display: none;">
-            <div class="pBack"><img src="img/back.svg"></div>
-            <div class="pPic"><img src="img/user.svg" class="userPic"></div>
-            <div class="pInfo">
-                <h1>User</h1>
-            </div>
-        </div>
-
-
-
-        <div class="top_banner">
-            <h1 id="h1-Chats">Chats</h1>
-              
-        </div>
-
-        <div class="main_container" id="contacts" style="display: none;">
-            <div class="search">
-                <form>
-                    <input type="text" class="search_bar" placeholder="search">
-                </form>
-            </div>
-
-            <div class="letter">
-                <p>Me</p>
-            </div>
-
-            <div class="contact">
-
-            </div>
-        </div>
-
-         <div class="input_banner-web"style="display: none;" >
-            <div class="pic"><img src="img/add.svg"></div>
-
-            <div class="input_bar-web">
-                <input type="text">
-            </div>
-
-            <div class="pic"><img src="img/send.svg"></div>
-        </div>
-
-
-
-
-
-        <div class="main_container" id="chats">
-
-
-            <div class="in" style="display: none;">
-                <div class="in_p">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam ullam rem non maxime, optio ad perspiciatis, similique maiores illum voluptatibus ducimus inventore in! Officia animi accusamus nesciunt iusto repudiandae!
-                    ffdsfsdfsdfsdfsdfdsfsdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</p>
-                </div>
-                <div class="in_hour">
-                    <p>12:30</p>
+                <div id="ajustes">
+                    <div id="userPictt"><img src="img/menu.png"  id="config-web"></div>
                 </div>
             </div>
 
-            <div class="out" style="display: none;"> 
-                
-                <div class="out_p">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+            <div class="search-bar">
+                <div id="search-img">
+                    <img src="img/search.png" >
                 </div>
-                <div class="out_hour">
-                    <p>12:32</p>
+                <div id="search-content">
+                    <input type="search" id="search-input">
+                </div>
+
+            </div>
+                <div id="message-content">
+
+                    <% for(let i = 0; i < data.length; i++) { %>
+                        <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
+                            <div id="img-in">
+                                    <div id="userInPict"><img src="img/user.svg" ></div>
+                            </div>
+
+                            <div id="datos-in">
+                                <div id="name-in">
+                                    <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
+                                </div>
+                                <div id="little-text">
+                                    <p>Mesnaje de prototipo</p>
+                                </div>
+                            </div>
+                        </div>
+                    <% } %>
                 </div>
             </div>
-        </div>
-        
 
 
+        <div class="container">
+            <div class="top_banner-web" style="display: none;">
+                <div class="pBack"><img src="img/back.svg"></div>
+                <div class="pPic"><img src="img/user.svg" class="userPic"></div>
+                <div class="pInfo">
+                    <h1>User</h1>
+                </div>
+            </div>
+
+            <div class="top_banner-web"  style="display: none;">
+                <div class="pBack"><img src="img/back.svg"></div>
+                <div class="pPic"><img src="img/user.svg" class="userPic"></div>
+                <div class="pInfo">
+                    <h1>User</h1>
+                </div>
+            </div>
+
+            <div class="top_banner">
+                <h1 id="h1-Chats">Chats</h1>
+            </div>
+
+            <div class="main_container" id="contacts" style="display: none;">
+                <div class="search">
+                    <form>
+                        <input type="text" class="search_bar" placeholder="search">
+                    </form>
+                </div>
+
+                <div class="letter">
+                    <p>Me</p>
+                </div>
+
+                <div class="contact">
+
+                </div>
+            </div>
+
+            <div class="input_banner-web"style="display: none;" >
+                <div class="pic"><img src="img/add.svg"></div>
+
+                <div class="input_bar-web">
+                    <input type="text">
+                </div>
+
+                <div class="pic"><img src="img/send.svg"></div>
+            </div>
 
 
+            <div class="main_container" id="chats">
+                <div class="in" style="display: none;">
+                    <div class="in_p">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam ullam rem non maxime, optio ad perspiciatis, similique maiores illum voluptatibus ducimus inventore in! Officia animi accusamus nesciunt iusto repudiandae!
+                        ffdsfsdfsdfsdfsdfdsfsdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+                    ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</p>
+                    </div>
+                    <div class="in_hour">
+                        <p>12:30</p>
+                    </div>
+                </div>
 
-
+                <div class="out" style="display: none;"> 
+                    <div class="out_p">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+                    </div>
+                    <div class="out_hour">
+                        <p>12:32</p>
+                    </div>
+                </div>
+            </div>
 
             <div class="search">
                 <form>
@@ -207,6 +185,6 @@
       </div>
 
       <script src="./socket.io/socket.io.js"></script>
-      <script src="./js/chat.js"></script>
+      <script src="../assets/js/chat.js"></script>
 </body>
 </html>
