--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -6,38 +6,26 @@
 	<title>Bienvenido a Sharkht!</title>
 	
 	<!-- Para que cargue al inicio -->
-
 	<link rel="stylesheet" type="text/css" href="./css/home_style.css">
-	 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	 
-	
-
-	
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-
 	<div id="Principal">
 		<div id="central">
 			<div id="arriba">
-				
 				<h1 id="titulo">Sharkht</h1>
 			</div>
+
 			<div id="enmedio">
-				 <input type="checkbox" class="toggle-switch" checked >
-
+				<input type="checkbox" class="toggle-switch" checked >
 			</div>
+
 			<div id="abajo">
-				<input type="text" class="inputDatos" id="Correo" placeholder="Correo electronico">
-				<input type="password" class="inputDatos" id="Contraseña" placeholder="Contraseña">
-				
-				<input type="submit" id="login-button" class ="mandar" value="Login">
-
+				<input type="text" class="inputDatos" id="Correo" placeholder="email address">
+				<input type="password" class="inputDatos" id="Contraseña" placeholder="password">
+				<input type="submit" id="login-button" class ="mandar" value="Log-in">
 			</div>
-			
-			
 		</div>
-		
-
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
