--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -21,9 +21,9 @@
 			</div>
 
 			<div id="abajo">
-				<input type="text" class="inputDatos" id="Correo" placeholder="email address">
-				<input type="password" class="inputDatos" id="Contraseña" placeholder="password">
-				<input type="submit" id="login-button" class ="mandar" value="Log-in">
+				<input type="text" class="inputDatos" id="Correo" placeholder="Email">
+				<input type="password" class="inputDatos" id="Contraseña" placeholder="Password">
+				<input type="submit" id="login-button" class ="mandar" value="Log in">
 			</div>
 		</div>
     </div>
