Cambios de scroll

--- a/chat_betas/src/views/chat.ejs
+++ b/chat_betas/src/views/chat.ejs
@@ -14,11 +14,7 @@
 <body>
     <div class="Principal-home">
 
-                <div id="search-img">
-                    <img src="img/search.png" >
-                <div id="search-content">
-                    <input type="search" id="search-input">
-                </div>
+ <div id="Principal-contacts" style="display: none;" data-id-personal="<%= data[0].idUsuario %>">
 
        <div class="ourUser">
            <div id="ourUser-picture">
