--- a/chat_betas/src/views/chat.ejs
+++ b/chat_betas/src/views/chat.ejs
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="./css/home_style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
-    <script  defer type="text/javascript" src="./js/funciones.js"></script>
     <script  defer type="text/javascript" src="./js/funciones_jq.js"></script>
     
     <title>Chat</title>
@@ -18,58 +17,24 @@
 
        <div class="ourUser">
            <div id="ourUser-picture">
-                <div id="backPict" style="display:none;"><img src="img/back.svg"  id="back-web"></div>
                 <div id="userPict"><img src="img/user.svg" ></div>
            </div>
            <div id="ajustes">
-                
                <div id="userPictt"><img src="img/menu.png"  id="config-web"></div>
-
            </div>
-           <div id="AddUser"><img src="img/Adduser.png" id="AddUser-img"></div>
-
        </div>
-        <div id="search-bar" >
+        <div class="search-bar">
             <div id="search-img">
                 <img src="img/search.png" >
             </div>
             <div id="search-content">
-                
-                <input type="search" value="Buscar Chat" id="search-input"onclick="if(this.value=='Buscar Chat') 
-                this.value=''" onblur="if(this.value=='') this.value='Buscar Chat'">
-
-                
-            </div>
-            <div id="IniciarConversacion">
-                    <img src="img/nuevo.png" id="nuevoimg">
+                <input type="search" id="search-input">
             </div>
 
         </div>
 
-        <div id="Configuracion-web" style="display:none">  
-            <div class="User_settings_Web">
-                <div id="Perfil_Image">
-                    <img src="img/user.svg"  id="User_Settings_Img">
-                </div>
-                <div id="Datos_User">
-                    <div id="User_Name_Settings">
-                        <p>User</p>
 
-                    </div>
-                    <div id="User_email_Settings">
-                        <p>Email address</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="Nuevos_Datos_Perfil_Web">
-                    <button class="buttonConfig" onclick="changeName()">Carmbiar Nombre de Usuario</button>
-                <button class="buttonConfig" onclick="changePassword()">Cambiar la Contraseña</button>
-            </div>
-
-        </div>
          <div id="message-content">
-
             <% for(let i = 0; i < data.length; i++) { %>
                 <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
                    <div id="img-in">
@@ -80,7 +45,7 @@
                            <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
                        </div>
                        <div id="little-text">
-                           <p>Mensaje de prototipo</p>
+                           <p>Mesnaje de prototipo</p>
                        </div>
                    </div>
                 </div>
@@ -126,24 +91,14 @@
                     <input type="text" class="search_bar" placeholder="search">
                 </form>
             </div>
-            
+
             <div class="letter">
-                <p>Contacts</p>
+                <p>Me</p>
             </div>
 
-            <% for(let i = 0; i < data.length; i++) { %>
-                <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
-                   <div id="img-in">
-                        <div id="userInPict"><img src="img/user.svg" ></div>
-                   </div>
+            <div class="contact">
 
-                   <div id="datos-in">
-                       <div id="name-in">
-                           <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
-                       </div>
-                   </div>
-                </div>
-            <% } %>
+            </div>
         </div>
 
          <div class="input_banner-web"style="display: none;" >
@@ -156,54 +111,34 @@
             <div class="pic"><img src="img/send.svg"></div>
         </div>
 
+
+
+
+
         <div class="main_container" id="chats">
+
+
             <div class="in" style="display: none;">
                 <div class="in_p">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam ullam rem non maxime, optio ad perspiciatis, similique maiores illum voluptatibus ducimus inventore in! Officia animi accusamus nesciunt iusto repudiandae!
                     ffdsfsdfsdfsdfsdfdsfsdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
                 ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</p>
                 </div>
-
                 <div class="in_hour">
                     <p>12:30</p>
                 </div>
             </div>
 
             <div class="out" style="display: none;"> 
+                
                 <div class="out_p">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
                 </div>
-
                 <div class="out_hour">
                     <p>12:32</p>
                 </div>
             </div>
         </div>
-
-        <!-- No Borren esto que ya me lo borraron una vez -->
-        <div class="main_container" id="chatsMovil">
-            <div class="search">
-                <input type="text" class="search_bar" placeholder="search">
-            </div>
-
-            <% for(let i = 0; i < data.length; i++) { %>
-                <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
-                   <div id="img-in">
-                        <div id="userInPict"><img src="img/user.svg" ></div>
-                   </div>
-                   
-                   <div id="datos-in">
-                       <div id="name-in">
-                           <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
-                       </div>
-                       <div id="little-text">
-                           <p>Mensaje de prototipo</p>
-                       </div>
-                   </div>
-                </div>
-            <% } %>
-        </div>
-        <!-- ... -->
         
 
 
@@ -212,7 +147,11 @@
 
 
 
-            
+            <div class="search">
+                <form>
+                    <input type="text" class="search_bar" placeholder="search">
+                </form>
+            </div>
         </div>
 
         <div class="main_containerConfig" id="config" style="display: none;">
