--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -19,8 +19,7 @@
 	<div id="Principal">
 		<div id="central">
 			<div id="arriba">
-				
-				<h1 id="titulo">Sharkht</h1>
+				<h1 id="titulo">UAQsApp</h1>
 			</div>
 			<div id="enmedio">
 				 <input type="checkbox" class="toggle-switch" checked >
